# demo_alloy

./: .gitignore  Cargo.toml  Makefile  README.md
contract/: Bridge.json  Bridge.sol  DemoERC20.json  IERC20.sol  Tokens.sol  combined_bridge.json  console.json  console.sol
contract/combined/: Bridge.json  DemoERC20.json  ExmERC20.json  TestERC20.json  console.json  tokens.json
data/: genesis.json  genesis.json.bk
data/keystore/: UTC--2025-05-12T06-52-14.764238799Z--d70e196eaea04eb065f8ad1acdc67c7ece43b7d9  UTC--2025-05-12T06-52-17.052287860Z--1a3878db4cb525c47157da734b607c5c61903e43  UTC--2025-05-12T06-52-19.609011463Z--5f57e12c0e8be10c6e77ce060c48f52a4fb636e7  UTC--2025-05-23T06-44-19.829823044Z--3501b5ed078ba4c2a07ef6aa43aee5dfe97aba2d  UTC--2025-05-23T06-44-22.805709528Z--ab671a72bdd6815df27ae9af4c53067d904f0289
src/: accounts.rs  console.rs  contracts.rs  lib.bk  lib.rs  main.rs
